Fix links in header and remove hardcoded chat box.

--- a/html/header.html
+++ b/html/header.html
@@ -43,49 +43,49 @@
                             <ul class="menu top-level-menu" role="menubar" aria-hidden="false">
                                 <li class="menu__item is-expanded first expanded menu-mlid-1905" role="menuitem" aria-haspopup="true"><a href="#" class="nolink">Find materials</a>
                                     <ul class="menu sub-menu" aria-hidden="true" role="menu">
-                                        <li role="menuitem"><a href="/find/books" tabindex="-1">Books &amp; ebooks</a></li>
-                                        <li role="menuitem"><a href="/find/articles" tabindex="-1">Articles &amp; journals</a></li>
+                                        <li role="menuitem"><a href="http://new.library.arizona.edu/find/books" tabindex="-1">Books &amp; ebooks</a></li>
+                                        <li role="menuitem"><a href="http://new.library.arizona.edu/find/articles" tabindex="-1">Articles &amp; journals</a></li>
                                         <li role="menuitem"><a href="https://libguides.library.arizona.edu/az.php" tabindex="-1">Research databases</a></li>
-                                        <li role="menuitem"><a href="/digital-collections" tabindex="-1">Digital collections &amp; exhibits</a></li>
-                                        <li role="menuitem"><a href="/find/other" tabindex="-1">Other types of materials</a></li>
+                                        <li role="menuitem"><a href="http://new.library.arizona.edu/digital-collections" tabindex="-1">Digital collections &amp; exhibits</a></li>
+                                        <li role="menuitem"><a href="http://new.library.arizona.edu/find/other" tabindex="-1">Other types of materials</a></li>
                                     </ul>
                                 </li>
                                 <li class="menu__item is-expanded expanded menu-mlid-1957" role="menuitem" aria-haspopup="true"><a href="#" class="nolink">Borrow &amp; request</a>
                                     <ul class="menu sub-menu" aria-hidden="true" role="menu">
-                                        <li role="menuitem"><a href="/borrow" tabindex="-1">Checkouts &amp; renewals</a></li>
-                                        <li role="menuitem"><a href="/tech/borrow" tabindex="-1">Borrow technology</a></li>
-                                        <li role="menuitem"><a href="/request" tabindex="-1">Request materials</a></li>
-                                        <li role="menuitem"><a href="/borrow/billing" tabindex="-1">Overdue &amp; lost materials</a></li>
+                                        <li role="menuitem"><a href="http://new.library.arizona.edu/borrow" tabindex="-1">Checkouts &amp; renewals</a></li>
+                                        <li role="menuitem"><a href="http://new.library.arizona.edu/tech/borrow" tabindex="-1">Borrow technology</a></li>
+                                        <li role="menuitem"><a href="http://new.library.arizona.edu/request" tabindex="-1">Request materials</a></li>
+                                        <li role="menuitem"><a href="http://new.library.arizona.edu/borrow/billing" tabindex="-1">Overdue &amp; lost materials</a></li>
                                     </ul>
                                 </li>
                                 <li class="menu__item is-expanded expanded menu-mlid-2029" role="menuitem" aria-haspopup="true"><a href="#" class="nolink">Study &amp; create</a>
                                     <ul class="menu sub-menu" aria-hidden="true" role="menu">
-                                        <li role="menuitem"><a href="/visit/spaces" tabindex="-1">Rooms &amp; spaces</a></li>
-                                        <li role="menuitem"><a href="/catalyst" tabindex="-1">CATalyst Studios</a></li>
-                                        <li role="menuitem"><a href="/visit/print" tabindex="-1">Print &amp; scan</a></li>
-                                        <li role="menuitem"><a href="/visit/tech" tabindex="-1">Equipment &amp; technology</a></li>
+                                        <li role="menuitem"><a href="http://new.library.arizona.edu/visit/spaces" tabindex="-1">Rooms &amp; spaces</a></li>
+                                        <li role="menuitem"><a href="http://new.library.arizona.edu/catalyst" tabindex="-1">CATalyst Studios</a></li>
+                                        <li role="menuitem"><a href="http://new.library.arizona.edu/visit/print" tabindex="-1">Print &amp; scan</a></li>
+                                        <li role="menuitem"><a href="http://new.library.arizona.edu/visit/tech" tabindex="-1">Equipment &amp; technology</a></li>
                                     </ul>
                                 </li>
                                 <li class="menu__item is-expanded expanded menu-mlid-2080" role="menuitem" aria-haspopup="true"><a href="#" class="nolink">Research &amp; publish</a>
                                     <ul class="menu sub-menu" aria-hidden="true" role="menu">
-                                        <li role="menuitem"><a href="/research/subject" tabindex="-1">Research by subject/topic</a></li>
-                                        <li role="menuitem"><a href="/research/course" tabindex="-1">Research by course/program</a></li>
-                                        <li role="menuitem"><a href="/research/write-cite" tabindex="-1">Write &amp; cite</a></li>
-                                        <li role="menuitem"><a href="/research/tutorials" tabindex="-1">Learn with tutorials</a></li>
-                                        <li role="menuitem"><a href="/research/support" tabindex="-1">Support for researchers</a></li>
+                                        <li role="menuitem"><a href=" http://new.library.arizona.edu/research/subject" tabindex="-1">Research by subject/topic</a></li>
+                                        <li role="menuitem"><a href=" http://new.library.arizona.edu/research/course" tabindex="-1">Research by course/program</a></li>
+                                        <li role="menuitem"><a href=" http://new.library.arizona.edu/research/write-cite" tabindex="-1">Write &amp; cite</a></li>
+                                        <li role="menuitem"><a href=" http://new.library.arizona.edu/research/tutorials" tabindex="-1">Learn with tutorials</a></li>
+                                        <li role="menuitem"><a href=" http://new.library.arizona.edu/research/support" tabindex="-1">Support for researchers</a></li>
                                     </ul>
                                 </li>
                                 <li class="menu__item is-expanded last expanded menu-mlid-2129" role="menuitem" aria-haspopup="true"><a href="#" class="nolink">About us</a>
                                     <ul class="menu sub-menu" aria-hidden="true" role="menu">
-                                        <li role="menuitem"><a href="/about/organization" tabindex="-1">Our organization</a></li>
-                                        <li role="menuitem"><a href="/hours" tabindex="-1">Hours</a></li>
-                                        <li role="menuitem"><a href="/visit/locations" tabindex="-1">Libraries &amp; locations</a></li>
-                                        <li role="menuitem"><a href="/libraryrenovations" tabindex="-1">Library renovations</a></li>
-                                        <li role="menuitem"><a href="/news-and-events" tabindex="-1">News, stories &amp; events</a></li>
-                                        <li role="menuitem"><a href="/jobs" tabindex="-1">Job opportunities</a></li>
-                                        <li role="menuitem"><a href="/giving" tabindex="-1">Giving to the Libraries</a></li>
-                                        <li role="menuitem"><a href="/people" tabindex="-1">Staff directory</a></li>
-                                        <li role="menuitem"><a href="/contact" tabindex="-1">Contact us</a></li>
+                                        <li role="menuitem"><a href="http://new.library.arizona.edu/about/organization" tabindex="-1">Our organization</a></li>
+                                        <li role="menuitem"><a href="http://new.library.arizona.edu/hours" tabindex="-1">Hours</a></li>
+                                        <li role="menuitem"><a href="http://new.library.arizona.edu/visit/locations" tabindex="-1">Libraries &amp; locations</a></li>
+                                        <li role="menuitem"><a href="http://new.library.arizona.edu/libraryrenovations" tabindex="-1">Library renovations</a></li>
+                                        <li role="menuitem"><a href="http://new.library.arizona.edu/news-and-events" tabindex="-1">News, stories &amp; events</a></li>
+                                        <li role="menuitem"><a href="http://new.library.arizona.edu/jobs" tabindex="-1">Job opportunities</a></li>
+                                        <li role="menuitem"><a href="http://new.library.arizona.edu/giving" tabindex="-1">Giving to the Libraries</a></li>
+                                        <li role="menuitem"><a href="http://new.library.arizona.edu/people" tabindex="-1">Staff directory</a></li>
+                                        <li role="menuitem"><a href="http://new.library.arizona.edu/contact" tabindex="-1">Contact us</a></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -103,7 +103,7 @@
                                 <a href="http://new.library.arizona.edu/contact" class="libanswers-button">Ask Us</a>
                             </li>
                             <li class="libapps-menu-item">
-                                <div id="libchat_07713bc057f66ebcdccd4dd1b4a2be3e" class="libchat-button"><button class="libchat_online">Chat</button></div>
+                                <div id="libchat_07713bc057f66ebcdccd4dd1b4a2be3e" class="libchat-button"></div>
                             </li>
                         </ul>
                     </div>
