Fix links in headers and footers.

--- a/html/footer.html
+++ b/html/footer.html
@@ -69,8 +69,8 @@
                     <li>1510 E. University Blvd.</li>
                     <li>Tucson, AZ 85721</li>
                     <li>(520) 621-6442</li>
-                    <li><a href="/contact">Contact us</a></li>
-                    <li><a href="/giving" class="footer__button footer__button--heart">Support the Libraries</a></li>
+                    <li><a href="https://new.library.arizona.edu/contact">Contact us</a></li>
+                    <li><a href="https://new.library.arizona.edu/giving" class="footer__button footer__button--heart">Support the Libraries</a></li>
                 </ul>
             </div>
 
@@ -88,12 +88,12 @@
             <div class="footer__section">
                 Information for:
                 <ul>
-                    <li><a href="/undergrads">Undergraduate students</a></li>
-                    <li><a href="/grads">Graduate students</a></li>
-                    <li><a href="/online">Online &amp; distance students</a></li>
-                    <li><a href="/faculty">Faculty</a></li>
-                    <li><a href="/instructors">Instructors</a></li>
-                    <li><a href="/alumni-visitors">Alumni &amp; visitors</a></li>
+                    <li><a href="https://new.library.arizona.edu/undergrads">Undergraduate students</a></li>
+                    <li><a href="https://new.library.arizona.edu/grads">Graduate students</a></li>
+                    <li><a href="https://new.library.arizona.edu/online">Online &amp; distance students</a></li>
+                    <li><a href="https://new.library.arizona.edu/faculty">Faculty</a></li>
+                    <li><a href="https://new.library.arizona.edu/instructors">Instructors</a></li>
+                    <li><a href="https://new.library.arizona.edu/alumni-visitors">Alumni &amp; visitors</a></li>
                 </ul>
             </div>
 
