--- a/html/header.html
+++ b/html/header.html
@@ -24,7 +24,7 @@
 
 
                     <div id="site-search" class="site-search search-closed">
-                        <form id="searchbox_015197345566630238480:8nviqyetmdk" class="site-search__form" action="/sitesearch"> <label for="google-site-search">Search our site</label> <input id="google-site-search" name="search" type="search" class="site-search__input" placeholder="Search our site"> <button class="btn site-search__submit" type="submit">Search</button> <span class="site-search__toggle"></span> </form>
+                        <form id="searchbox_015197345566630238480:8nviqyetmdk" class="site-search__form" action="https://new.library.arizona.edu/sitesearch"> <label for="google-site-search">Search our site</label> <input id="google-site-search" name="search" type="search" class="site-search__input" placeholder="Search our site"> <button class="btn site-search__submit" type="submit">Search</button> <span class="site-search__toggle"></span> </form>
                     </div>
                 </div>
             </div>
