--- a/html/header.html
+++ b/html/header.html
@@ -18,7 +18,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-6 col-lg-4">
-                <a href="/ua_quickstart/" title="Quickstart Test | Home" class="header__logo active" rel="home" id="logo"><img src="http://localhost/ua_quickstart/profiles/ua_quickstart/themes/custom/ua_zen/logo.png" alt="Quickstart Test | Home" class="header__logo-image"></a> </div>
+                <a href="https://new.library.arizona.edu" title="University Libraries" class="header__logo active" rel="home" id="logo"><img src="https://wsimpson-libguides.s3.us-west-2.amazonaws.com/images/logo.png" alt="Quickstart Test | Home" class="header__logo-image"></a> </div>
             <div class="col-xs-12 col-sm-6 col-lg-8">
                 <div class="row">
                     <div class="col-xs-12">
