Update footer logo location and header logo target.

--- a/html/footer.html
+++ b/html/footer.html
@@ -7,7 +7,7 @@
                 <div class="col-xs-12 col-sm-5 col-md-4 col-lg-4 text-center-xs text-left-not-xs">
                     <div class="row bottom-buffer-30">
                         <div class="col-xs-12">
-                            <a href="/ua_quickstart/" title="Quickstart Test | Home" class="active"><img src="http://localhost/ua_quickstart/profiles/ua_quickstart/themes/custom/ua_zen/logo.png" alt="Quickstart Test | Home"></a> </div>
+                            <a href="https://www.library.arizona.edu" title="University Libraries" class="header__logo active" rel="home" id="logo"><img src="https://wsimpson-libguides.s3.us-west-2.amazonaws.com/images/logo.png" alt="Quickstart Test | Home" class="header__logo-image"></a> </div>
                     </div>
                 </div>
                 <!-- Add the extra clearfix for only the required viewport -->
