--- a/html/header.html
+++ b/html/header.html
@@ -36,7 +36,7 @@
                             <div id="block-search-form" class="block block-search first last odd" role="search">
 
 
-                                <form action="https://new.library.arizona.edu/sitesearch" id="search-block-form" accept-charset="UTF-8">
+                                <form action="https://new.library.arizona.edu/sitesearch" id="search-block-form" method="get" accept-charset="UTF-8">
                                     <div>
 
                                         <div class="container-inline">
