Fix menu behavior for keyboard navigation.

--- a/html/header.html
+++ b/html/header.html
@@ -65,7 +65,7 @@
                     <span class="hamburger">Open Navigation</span>
                 </button>
             </div>
-            <div id="navbar" class="overlay-menu-scroll uazen-overlay-menu-keyboard-processed uazen-overlay-menu-hover-processed" role="menu" aria-expanded="false">
+            <div id="navbar" class="overlay-menu-scroll" role="menu" aria-expanded="false">
                 <div class="navbar-scroller">
                     <ul class="menu nav navbar-nav">
                         <li class="menu__item is-expanded first expanded dropdown"><a title="" class="menu__link text-uppercase dropdown-toggle nolink" data-target="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" tabindex="0">Find materials <span class="caret"></span></a>
