Add submit button for search form.

--- a/html/header.html
+++ b/html/header.html
@@ -43,6 +43,7 @@
                                             <h2 class="element-invisible">Search form</h2>
                                             <div class="form-item form-item-search-block-form form-type-textfield form-group"><input title="Enter the terms you wish to search for." placeholder="Search Site" class="input-search form-control form-text" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Search Site'" type="text" id="edit-search-block-form--2" name="search" value="" size="15" maxlength="128"> <label class="control-label element-invisible" for="edit-search-block-form--2">Search</label>
                                             </div>
+                                            <div class="form-actions form-wrapper" id="edit-actions"><input class="btn btn-search radius form-submit" type="submit" id="edit-submit" name="op" value="Search"></div>
                                         </div>
                                     </div>
                                 </form>
