--- a/html/footer.html
+++ b/html/footer.html
@@ -24,11 +24,11 @@
 
                                     </span><span>
 
-                                        <a href="mailto:department.name@email.arizona.edu" class="mailto">department.name@email.arizona.edu<span class="mailto" aria-label="(link sends e-mail)"></span></a>
+                                        <a href="https://new.library.arizona.edu/contact">Contact Us</a>
 
                                     </span><span>
 
-                                        <a href="tel:520-621-2211">520-621-2211</a>
+                                        <a href="tel:520-621-6442">(520) 621-6442</a>
 
                                     </span></p>
                             </div>
