Move search bar to utility header.

--- a/html/header.html
+++ b/html/header.html
@@ -11,6 +11,27 @@
                     <img alt="The University of Arizona Wordmark Line Logo White" src="https://cdn.uadigital.arizona.edu/logos/v1.0.0/ua_wordmark_line_logo_white_rgb.min.svg" class="arizona-line-logo">
                 </a>
             </div>
+            <div class="col-xs-2 col-sm-6">
+                <div class="row">
+                    <div class="region region-header-ua-utilities">
+                        <div id="block-search-form" class="block block-search contextual-links-region first last odd" role="search">
+                            <form action="https://new.library.arizona.edu/sitesearch" id="search-block-form" method="get" accept-charset="UTF-8">
+
+                                <div>
+
+                                    <div class="container-inline">
+                                        <h2 class="element-invisible">Search form</h2>
+                                        <div class="form-item form-item-search-block-form form-type-textfield form-group"><input title="Enter the terms you wish to search for." placeholder="Search UA Libraries Website" class="input-search form-control form-text" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Search Site'" type="text" id="edit-search-block-form--2" name="search" value="" size="15" maxlength="128"> <label class="control-label element-invisible" for="edit-search-block-form--2">Search</label>
+                                        </div>
+                                        <div class="form-actions form-wrapper" id="edit-actions"><input class="btn btn-search radius form-submit" type="submit" id="edit-submit" name="op" value="Search"></div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </section>
 </header>
@@ -29,28 +50,6 @@
                                 <li class="menu-702 first last"><a href="https://new.library.arizona.edu/accounts/" title="" target="_blank" rel="noopener noreferrer">My account</a></li>
                             </ul>
                         </div>
-
-                        <div class="header__region region region-header">
-
-
-                            <div id="block-search-form" class="block block-search first last odd" role="search">
-
-
-                                <form action="https://new.library.arizona.edu/sitesearch" id="search-block-form" method="get" accept-charset="UTF-8">
-                                    <div>
-
-                                        <div class="container-inline">
-                                            <h2 class="element-invisible">Search form</h2>
-                                            <div class="form-item form-item-search-block-form form-type-textfield form-group"><input title="Enter the terms you wish to search for." placeholder="Search Site" class="input-search form-control form-text" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Search Site'" type="text" id="edit-search-block-form--2" name="search" value="" size="15" maxlength="128"> <label class="control-label element-invisible" for="edit-search-block-form--2">Search</label>
-                                            </div>
-                                            <div class="form-actions form-wrapper" id="edit-actions"><input class="btn btn-search radius form-submit" type="submit" id="edit-submit" name="op" value="Search"></div>
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-
-                        </div>
-
                     </div>
                 </div>
             </div>
