--- a/html/header.html
+++ b/html/header.html
@@ -52,6 +52,27 @@
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="region region-header-2">
+                        <div class="offset-md-4 col-lg-3 right-buffer-lg-1 left-buffer-lg-50 col-md-6 col-sm-12 col-xs-12 col-lg-offset-6">
+                            <div id="block-bean-foo-0" class="block block-bean first odd" role="complementary" aria-label="call to action link">
+                                <div class="entity entity-bean bean-uaqs-call-to-action clearfix">
+                                    <div class="content">
+                                        <a href="https://new.library.arizona.edu/contact" class="gta-cta-header-buttons btn btn-hollow-default btn-block">Ask Us</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="offset-md-4 col-lg-3 right-buffer-lg-1 left-buffer-lg-50 col-md-6 col-sm-12 col-xs-12">
+                            <div id="block-bean-chat" class="block block-bean last even" role="complementary" aria-label="call to action link">
+                                <div class="entity entity-bean bean-uaqs-call-to-action clearfix" about="/ua_quickstart/block/chat">
+                                    <div id="libchat_07713bc057f66ebcdccd4dd1b4a2be3e" class="content">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div> <!-- /.row -->
             </div>
         </div> <!-- /.row -->
     </div> <!-- /.container -->
