--- a/html/footer.html
+++ b/html/footer.html
@@ -20,7 +20,7 @@
                             <div class="content">
                                 <p class="text-center-xs text-right-sm text-right-md text-right-lg"><span>
 
-                                        The University of Arizona Tucson AZ 85721
+                                        Universirty Libraries Tucson AZ 85721
 
                                     </span><span>
 
