--- a/html/footer.html
+++ b/html/footer.html
@@ -14,6 +14,14 @@
                 <div class="clearfix visible-xs-block"></div>
                 <div class="col-xs-12 col-sm-7 col-md-8 col-lg-8">
                     <!-- BEGIN OUTPUT from 'profiles/ua_quickstart/modules/custom/uaqs_block_types/templates/block--bean.tpl.php' -->
+                    <div id="block-bean-uaqs-footer-links-bean-main" class="block block-bean first odd small text-right-lg text-right-md  text-right-sm text-center-xs" role="complementary">
+                        <ul class="menu">
+                            <li class="menu__item is-leaf first leaf"><a href="http://new.library.arizona.edu/policies" class="menu__link" target="_blank" rel="noopener noreferrer">Policies</a></li>
+                            <li class="menu__item is-leaf leaf"><a href="http://new.library.arizona.edu/accessibility" class="menu__link" target="_blank" rel="noopener noreferrer">Accessibility</a></li>
+                            <li class="menu__item is-leaf leaf"><a href="http://new.library.arizona.edu/jobs" class="menu__link" target="_blank" rel="noopener noreferrer">Job opportunities</a></li>
+                            <li class="menu__item is-leaf leaf"><a href="https://privacy.arizona.edu/privacy-statement" class="menu__link" target="_blank" rel="noopener noreferrer">University Privacy Statement</a></li>
+                        </ul>
+                    </div>
                     <div id="block-bean-main-unit-or-department-contact-" class="block block-bean first last odd" role="complementary">
 
                         <div class="entity entity-bean bean-uaqs-contact-summary clearfix" about="/ua_quickstart/block/main-unit-or-department-contact-">
@@ -42,22 +50,63 @@
                 <div class="col-xs-12">
                     <hr>
                 </div>
-            </div>
-        </div>
-    </div>
+                <div id="footer_sub" class="region region-footer-sub">
+                    <div class="container">
+                        <div class="row">
+                            <div id="block-bean-uaqs-footer-links-bean-informa" class="block block-bean first odd col-xs-12 col-sm-4 col-md-4 col-lg-4" role="complementary">
+                                <h5><strong class="text-uppercase">Information for</strong></h5>
+                                <ul class="menu">
+                                    <li class="menu__item is-leaf first leaf"><a href="https://new.library.arizona.edu/undergrads" class="menu__link" target="_blank" rel="noopener noreferrer">Undergraduate Students</a></li>
+                                    <li class="menu__item is-leaf leaf"><a href="https://new.library.arizona.edu/grads" class="menu__link" target="_blank" rel="noopener noreferrer">Graduate students</a></li>
+                                    <li class="menu__item is-leaf leaf"><a href="https://new.library.arizona.edu/online" class="menu__link" target="_blank" rel="noopener noreferrer">Online &amp; distance students</a></li>
+                                    <li class="menu__item is-leaf leaf"><a href="https://new.library.arizona.edu/faculty" class="menu__link" target="_blank" rel="noopener noreferrer">Faculty</a></li>
+                                    <li class="menu__item is-leaf leaf"><a href="https://new.library.arizona.edu/instructors" class="menu__link" target="_blank" rel="noopener noreferrer">Instructors</a></li>
+                                    <li class="menu__item is-leaf last leaf"><a href="https://new.library.arizona.edu/alumni-visitors" class="menu__link" target="_blank" rel="noopener noreferrer">Alumni &amp; visitors</a></li>
+                                </ul>
+                            </div>
+                            <div class="clearfix visible-xs-block col-xs-12">
+                                <hr>
+                            </div>
+                            <div id="block-bean-uaqs-footer-links-bean-topics" class="block block-bean even col-xs-12 col-sm-4 col-md-4 col-lg-4" role="complementary">
+                                <ul class="menu">
+                                    <li class="menu__item is-leaf first leaf"><a href="http://new.library.arizona.edu/visit/main" class="menu__link" target="_blank" rel="noopener noreferrer">Main Library</a></li>
+                                    <li class="menu__item is-leaf leaf"><a href="http://new.library.arizona.edu/visit/science" class="menu__link" target="_blank" rel="noopener noreferrer">Albert B. Weaver Science-Engineering Library</a></li>
+                                    <li class="menu__item is-leaf leaf"><a href="http://new.library.arizona.edu/visit/fine-arts" class="menu__link" target="_blank" rel="noopener noreferrer">Fine Arts Library</a></li>
+                                    <li class="menu__item is-leaf leaf"><a href="http://ahsl.arizona.edu/" class="menu__link" target="_blank" rel="noopener noreferrer">Health Sciences Library</a></li>
+                                    <li class="menu__item is-leaf leaf"><a href="http://speccoll.library.arizona.edu/" class="menu__link" target="_blank" rel="noopener noreferrer">Special Collections</a></li>
+                                    <li class="menu__item is-leaf leaf"><a href="http://www.uapress.arizona.edu/" class="menu__link" target="_blank" rel="noopener noreferrer">The University of Arizona Press</a></li>
+                                </ul>
+                            </div>
+                            <div class="clearfix visible-xs-block col-xs-12">
+                                <hr>
+                            </div>
+                            <div class="clearfix visible-sm-block col-xs-12">
+                                <hr>
+                            </div>
+                            <div id="block-uaqs-social-media-uaqs-social-media-links" class="block block-uaqs-social-media last even col-xs-12 col-sm-4 col-md-4 col-lg-4" role="complementary">
 
-    <div id="footer_sub" class="region region-footer-sub">
-        <div class="container">
-            <div class="row">
-            </div>
-            <div class="row">
-                <div class="col-xs-12 text-center">
-                    <p class="small"><a href="https://www.arizona.edu/information-security-privacy" target="_blank" rel="noopener noreferrer">University Information Security and Privacy</a></p>
-                    <p class="copyright small">© 2020 The Arizona Board of Regents on behalf of <a href="https://www.arizona.edu" target="_blank" rel="noopener noreferrer">The University of Arizona</a>.</p>
+                                <h5><strong class="text-uppercase">Connect</strong></h5>
+
+                                <div class="content">
+                                    <ul id="social-media-links">
+                                        <li class="uaqs-social-media"><a href="https://www.facebook.com/uazlibraries" target="_blank" title="Click here to visit our Facebook page" rel="noopener noreferrer"><i class="ua-brand-facebook"></i>Facebook</a></li>
+                                        <li class="uaqs-social-media"><a href="https://twitter.com/uazlibraries" target="_blank" title="Click here to visit our Twitter page" rel="noopener noreferrer"><i class="ua-brand-twitter"></i>Twitter</a></li>
+                                        <li class="uaqs-social-media"><a href="https://instagram.com/uazlibraries" target="_blank" title="Click here to visit our Instagram page" rel="noopener noreferrer"><i class="ua-brand-instagram"></i>Instagram</a></li>
+                                        <li class="uaqs-social-media"><a href="https://www.youtube.com/user/UAZLibraries" target="_blank" title="Click here to visit our YouTube page" rel="noopener noreferrer"><i class="ua-brand-youtube"></i>YouTube</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-12 text-center">
+                                <hr>
+                                <p class="small"><a href="https://www.arizona.edu/information-security-privacy" target="_blank" rel="noopener noreferrer">University Information Security and Privacy</a></p>
+                                <p class="copyright small">© 2020 The Arizona Board of Regents on behalf of <a href="https://www.arizona.edu" target="_blank" rel="noopener noreferrer">The University of Arizona</a>.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-
-
 </footer>
